k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banco-digital
  labels:
    name: banco-digital
    project: banco-digital
