k8s/core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-banking-service
  labels:
    app: core-banking
spec:
  type: ClusterIP
  selector:
    app: core-banking
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
